# constellation

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  constellation.yaml
.github/workflows/: checks.yaml
backend/: Dockerfile
backend/src/agents/: mod.rs  research.rs
backend/src/agents/tools/: search.rs
backend/src/routes/: health.rs  query.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: QueryInput.tsx  StatusBadge.tsx
kubernetes/: deployment.yaml  service.yaml
src/: config.rs  main.rs  models.rs
src/agents/prompts/: research.txt
src/routes/: health.rs  mod.rs  query.rs  root.rs
